--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 </div>
 
                 <div class='menu-subtext'>
-                    Традиционная японская лапша <br> из пшеничной муки
+                    Традиционная японская <br>лапша из пшеничной муки
                 </div>
 
                 <div class='menu-button'>
